MODUL-505 - style empty table

--- a/src/components/table/table-empty/table-empty.html
+++ b/src/components/table/table-empty/table-empty.html
@@ -1,7 +1,9 @@
-<m-table-row class="m-table-empty-cell">
+<m-table-row>
     <slot v-if="hasSlot"></slot>
-    <m-table-cell v-else :colspan="columns">
+    <m-table-cell class="m-table-empty" v-else :colspan="columns">
+        <m-icon class="m-table-empty-cell--icon" name="m-svg__heraldry" size="45"></m-icon>
+        <p>
             {{ i18nEmptyData }}
-            <m-icon name="m-svg__heraldry"></m-icon>
+        </p>
     </m-table-cell>
 </m-table-row>
