--- a/src/components/table/table.sandbox.scss
+++ b/src/components/table/table.sandbox.scss
@@ -12,6 +12,11 @@
         }
     }
 
+    &--show-more {
+        text-align: center;
+        padding: $m-padding;
+    }
+
     h2 {
         margin-bottom: $m-margin;
     }
