MODUL-505 - Change icon name

--- a/src/components/table/table-empty/table-empty.html
+++ b/src/components/table/table-empty/table-empty.html
@@ -1,7 +1,7 @@
 <m-table-row>
     <slot v-if="hasSlot"></slot>
     <m-table-cell class="m-table-empty" v-else :colspan="columns">
-        <m-icon class="m-table-empty-cell--icon" name="m-svg__no-data" size="55"></m-icon>
+        <m-icon class="m-table-empty-cell--icon" name="m-svg__data" size="55"></m-icon>
         <p>
             {{ i18nEmptyData }}
         </p>
