MODUL-505 - add button in sandbox

--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -31,7 +31,10 @@
         <m-table-footer>
             <m-table-row>
                 <m-table-cell class="m-table-sandbox--show-more" colspan="5">
-                    <m-link>Show more</m-link>
+                    <m-button class="m-table-sandbox--show-more--button" @click="showMore">
+                        <p>Show more results</p>
+                        <span>1-10 of 45</span>
+                    </m-button>
                 </m-table-cell>
             </m-table-row>
         </m-table-footer>
