--- a/src/components/table/table.sandbox.scss
+++ b/src/components/table/table.sandbox.scss
@@ -15,6 +15,17 @@
     &--show-more {
         text-align: center;
         padding: $m-padding;
+
+        &--button {
+            p {
+                margin-top: 0;
+                margin-bottom: $m-margin--xs;
+            }
+
+            span {
+                font-weight: $m-font-weight--light;
+            }
+        }
     }
 
     h2 {
