--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -378,7 +378,7 @@
                 color: $m-color--grey-darker;
                 height: 64px;
 
-                &.m-table-empty {
+                &.m-table--empty {
                     background-color: $m-color--grey-lightest;
                     text-align: center;
                     height: 161px;
