Improvements to Dialog sandboxes

--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -1,7 +1,7 @@
 <div>
-    <h2 class="m-u--no-margin">Width default with a single button</h2>
-    <m-dialog class="m-u--margin-top" :secBtn="false" title="Titre de la fenêtre">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+    <h2 class="m-u--h4 m-u--no-margin">Width default</h2>
+    <m-dialog class="m-u--margin-top" :secBtn="false" title="Dialog Example #1">
+        <m-button slot="trigger">Ouvrir Dialog #1</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel
         doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero
         id!
@@ -9,9 +9,9 @@
     <br/>
     <br/>
     <br/>
-    <h2 class="m-u--no-margin">Width default with type=error andboth buttons</h2>
-    <m-dialog class="m-u--margin-top" type="error" title="Titre de la fenêtre">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+    <h2 class="m-u--h4 m-u--no-margin">Width default, type=error, secondary button</h2>
+    <m-dialog class="m-u--margin-top" type="error" title="Dialog Example #2">
+        <m-button slot="trigger">Ouvrir Dialog #2</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel
         doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero
         id!
@@ -19,32 +19,31 @@
     <br/>
     <br/>
     <br/>
-    <h2 class="m-u--no-margin">Width default with type=confirmation, secondary button, hint and cancelLink</h2>
-    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" cancelLink="true" type="confirmation"
+    <h2 class="m-u--h4 m-u--no-margin">Width default,type=confirmation, secondary button, hint, cancelLink</h2>
+    <m-dialog class="m-u--margin-top" title="Dialog Example #3" cancelLink="true" type="confirmation"
               hint="This is a hint, but is it a good hint?">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+        <m-button slot="trigger">Ouvrir Dialog #3</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel
         doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero
         id!
     </m-dialog>
     <br/>
     <br/>
-    <h2>Width large with type=information, primary btn precision, custom secondary btn label</h2>
-    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" type="information" width="large"
+    <h2 class="m-u--h4 m-u--no-margin">Width large, type=information, primary btn precision, secondary btn label</h2>
+    <m-dialog class="m-u--margin-top" title="Dialog Example #4" type="information" width="large"
               prBtnPrecision="this is a precision" secBtnLabel="Long custom close label">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+        <m-button slot="trigger">Ouvrir Dialog #4</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel
         doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero
         id!
     </m-dialog>
     <br/>
     <br/>
-    <h2>Width large with with specified type=warning, sec btn custom label, hint, cancelLink, custom cancelLink
-        Label</h2>
-    <m-dialog class="m-u--margin-top" type="warning" title="Titre de la fenêtre" cancelLink="true"
+    <h2 class="m-u--h4 m-u--no-margin">Width large, type=warning, secondary btn precision, hint, cancelLink, cancelLink Label</h2>
+    <m-dialog class="m-u--margin-top" type="warning" title="Dialog Example #5" cancelLink="true"
               secBtnPrecision="small precision" cancelLinkLabel="Get out" width="large"
               hint="I am a very big hint, even bigger than the other hint">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+        <m-button slot="trigger">Ouvrir Dialog #5</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel
         doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero
         id!
