Replace Hex code with an existing var

--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -43,7 +43,7 @@ $m-message-size: 32px;
                 font-style: italic;
                 font-size: 19px;
                 line-height: 1;
-                border: 1px solid #00c77f;
+                border: 1px solid $m-color--hint;
                 margin: 4px;
                 background-color: #fff;
             }
