--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -4,6 +4,7 @@
     <m-message state="warning" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <m-message state="information" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <m-message skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+    <m-message state="hint" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <div class="m-u--margin-top--l">
         <m-message title="Ad labore ad ex do minim." state="warning" skin="light">Ad labore ad ex do minim qui eu aliquip aute non. Tempor Lorem ipsum ad id esse minim. Pariatur cupidatat qui qui reprehenderit voluptate aute officia consectetur cillum sint do. Consequat ipsum ex est culpa sint velit nostrud nisi minim tempor nostrud tempor adipisicing do.</m-message>
         <m-message title="Ad labore ad ex do minim." state="error" skin="light"></m-message>
@@ -27,20 +28,20 @@
     <m-message state="error" :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <m-message state="warning" :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <m-message state="information" :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
-    <m-message state="hint" :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
     <m-message :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+    <m-message state="hint" :close-button="true">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 
     <h2>Skin page</h2>
     <m-message class="m-u--margin-top--l" title="Error" state="error" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Warning" state="warning" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Information" state="information" skin="page"></m-message>
+    <m-message class="m-u--margin-top--l" title="Titre contenant un retour<br>de ligne HTML" state="confirmation" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Hint" state="hint" skin="page"></m-message>
-    <m-message class="m-u--margin-top--l" title="Titre contenant un retour<br>de ligne HTML" state="confirmation" skin="page">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 
     <h2>Skin page-light</h2>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Error" state="error"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Warning" state="warning"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Information" state="information"></m-message>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Titre contenant un retour<br>de ligne HTML" state="confirmation"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Hint" state="hint"></m-message>
-    <m-message class="m-u--margin-top--l" skin="page-light" title="Titre contenant un retour<br>de ligne HTML" state="confirmation">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 </div>
