MODUL-505 - table footer

--- a/src/components/table/table.html
+++ b/src/components/table/table.html
@@ -30,4 +30,10 @@
             </tr>
         </tbody>
     </slot>
+
+    <tfoot v-if="$slots.footer">
+        <tr>
+            <slot name="footer"></slot>
+        </tr>
+    </tfoot>
 </table>
