--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -1,38 +1,28 @@
 <div class="m-table-sandbox">
     <h2>Classic table</h2>
-    <m-table :columns="columns" :rows="rows"></m-table>
+    <m-table :columns="simpleColumns" :rows="rows"></m-table>
 
-    <h2>Table - Custom table element</h2>
-    <m-table :columns="columns" :rows="rows">
+    <h2>Semi-complex table</h2>
+    <m-table :columns="columns" :rows="rows" style="width:30%;">
         <template slot="header">
             <thead>
                 <tr>
-                    <th>NAME</th>
+                    <th colspan="2">NAME, USERNAME</th>
                     <th>AGE</th>
-                    <th>USERNAME</th>
                 </tr>
             </thead>
         </template>
         <template slot="body">
             <tbody>
                 <tr v-for="row in rows">
+                    <td colspan="2">{{ row.name }} - {{ row.username }}</td>
                     <td>{{ row.age }}</td>
-                    <td>{{ row.username }}</td>
-                    <td>{{ row.name }}</td>
                 </tr>
             </tbody>
         </template>
-        <template slot="footer">
-            <td class="m-table-sandbox--show-more" colspan="4">
-                <m-button class="m-table-sandbox--show-more--button" @click="showMore">
-                    <p>Show more results</p>
-                    <span>1-10 of 45</span>
-                </m-button>
-            </td>
-        </template>
     </m-table>
 
-    <h2>Table - Custom cells</h2>
+    <h2>Complex table</h2>
     <m-table :columns="columns" :rows="rows">
         <template slot="header.age">
             <th>AGE</th>
@@ -40,12 +30,23 @@
         <template slot="body.age" scope="{data}">
             <td>{{ data.age }} ans</td>
         </template>
+        <template slot="body.check" scope="{data}">
+            <td><m-checkbox @change="onCheck(data.id)"></m-checkbox></td>
+        </template>
         <template slot="body.menu" scope="{data}">
             <td>
                 <m-option>
                     <m-option-item-edit @click="editData(data.id)"></m-option-item-edit>
                     <m-option-item-delete @click="deleteData(data.id)"></m-option-item-delete>
                 </m-option>
+            </td>
+        </template>
+        <template slot="footer">
+            <td class="m-table-sandbox--show-more" colspan="4">
+                <m-button class="m-table-sandbox--show-more--button" @click="showMore">
+                    <p>Show more results</p>
+                    <span>1-5 of 45</span>
+                </m-button>
             </td>
         </template>
     </m-table>
