--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -45,7 +45,7 @@ $m-message-size: 32px;
                 line-height: 1;
                 border: 1px solid $m-color--hint;
                 margin: 4px;
-                background-color: #fff;
+                background-color: $m-color--white;
             }
         }
     }
