MODUL-505 - change function name

--- a/src/components/table/table.html
+++ b/src/components/table/table.html
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <slot v-for="column in columns" :name="'header.' + column.dataProp">
-                    <th :style="widthColumn(column)">
+                    <th :style="columnWidth(column)">
                         {{ column.title }}
                     </th>
                 </slot>
