MODUL-508 - fix sidebar text selection

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -184,6 +184,7 @@
         padding: $m-padding;
         flex: 1 1 auto;
         overflow: auto;
+        user-select: text;
 
         @include m-scrollbar();
     }
