MODUL-505 - Remove data icon

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -383,6 +383,10 @@
                     text-align: center;
                     height: 161px;
                     color: $m-color--grey;
+
+                    p {
+                        margin-top: 0;
+                    }
                 }
 
                 &:first-child {
