modification after code review

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,5 +1,61 @@
 @import '../../styles/abstracts/variables';
 
+@mixin m-table-regular() {
+    thead {
+        text-align: left;
+
+        tr {
+            background-color: rgba($m-color--grey-light, 0.3);
+
+            th {
+                opacity: 1;
+                color: $m-color--grey;
+                height: 64px;
+
+                &:first-child {
+                    padding-left: $m-padding;
+                }
+
+                &:last-child {
+                    padding-right: $m-padding;
+                }
+            }
+        }
+    }
+
+    tbody {
+        tr {
+            &:nth-child(even) {
+                background: $m-color--grey-lightest;
+            }
+
+            td {
+                color: $m-color--grey-darker;
+                height: 64px;
+
+                &.m-table--empty {
+                    background-color: $m-color--grey-lightest;
+                    text-align: center;
+                    height: 161px;
+                    color: $m-color--grey;
+
+                    p {
+                        margin-top: 0;
+                    }
+                }
+
+                &:first-child {
+                    padding-left: $m-padding;
+                }
+
+                &:last-child {
+                    padding-right: $m-padding;
+                }
+            }
+        }
+    }
+}
+
 .m-table-regular {
     @include m-table-regular();
 }
