MODUL-505 - Revu de code

--- a/src/components/table/table.html
+++ b/src/components/table/table.html
@@ -1,4 +1,4 @@
-<table class="m-table" :class="[ 'm-table-' + skin]" cellspacing="0">
+<table class="m-table" :class="[ 'm--is-skin-' + skin]" cellspacing="0">
     <slot name="header">
         <thead>
             <tr>
