--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -4,22 +4,19 @@
 
     <h2>Semi-complex table</h2>
     <m-table :columns="columns" :rows="rows" style="width:30%;">
-        <template slot="header">
-            <thead>
-                <tr>
-                    <th colspan="2">NAME, USERNAME</th>
-                    <th>AGE</th>
-                </tr>
-            </thead>
-        </template>
-        <template slot="body">
-            <tbody>
-                <tr v-for="(row, index) in rows" :key="index">
-                    <td colspan="2">{{ row.name }} - {{ row.username }}</td>
-                    <td>{{ row.age }}</td>
-                </tr>
-            </tbody>
-        </template>
+        <thead slot="header">
+            <tr>
+                <th colspan="2">NAME, USERNAME</th>
+                <th>AGE</th>
+            </tr>
+        </thead>
+
+        <tbody slot="body">
+            <tr v-for="(row, index) in rows" :key="index">
+                <td colspan="2">{{ row.name }} - {{ row.username }}</td>
+                <td>{{ row.age }}</td>
+            </tr>
+        </tbody>
     </m-table>
 
     <h2>Complex table</h2>
@@ -35,15 +32,15 @@
         </template>
         <template slot="body.menu" scope="{data}">
             <td>
-                <m-option>
+                <m-option size="33px">
                     <m-option-item-edit @click="editData(data.id)"></m-option-item-edit>
                     <m-option-item-delete @click="deleteData(data.id)"></m-option-item-delete>
                 </m-option>
             </td>
         </template>
         <template slot="footer">
-            <td class="m-table-sandbox--show-more" colspan="4">
-                <m-button class="m-table-sandbox--show-more--button" @click="showMore">
+            <td class="m-table-sandbox__show-more" colspan="4">
+                <m-button class="m-table-sandbox__show-more-button" @click="showMore">
                     <p>Show more results</p>
                     <span>1-5 of 45</span>
                 </m-button>
@@ -57,7 +54,7 @@
     <h2>Empty table - custom slot</h2>
     <m-table :columns="columns" :rows="emptyRows">
         <template slot="empty">
-            <td class="empty-table-custom" :colspan="columns.length">
+            <td class="m-table-sandbox__empty-table-custom" :colspan="columns.length">
                 Empty table
             </td>
         </template>
