MODUL-541 - Close <p> in sandbox

--- a/src/components/panel/panel.sandbox.html
+++ b/src/components/panel/panel.sandbox.html
@@ -1,6 +1,6 @@
 <div>
     <m-panel>
         <h2 slot="header">I am a title</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur odit ut excepturi omnis ea explicabo blanditiis quaerat cupiditate odio a?/p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum voluptas quis corporis fugit nobis beatae vel, quia at consequuntur odit ut excepturi omnis ea explicabo blanditiis quaerat cupiditate odio a?</p>
     </m-panel>
 </div>
