--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -3,7 +3,7 @@
     <portal :target-el="portalTargetSelector" v-if="portalCreated">
         <transition name="m--is">
             <div v-show="propOpen" v-if="portalMounted"
-                 class="m-modal__wrap m--is-modal"
+                 class="m-modal__wrap m--is-modal m-u--app-body"
                  :class="[{ 'm--is-small': sizeSmall,
                             'm--is-large': sizeLarge,
                             'm--is-full-screen': sizeFullSceen,
