--- a/src/components/overlay/overlay.html
+++ b/src/components/overlay/overlay.html
@@ -2,7 +2,7 @@
     <slot name="trigger"></slot>
     <portal :target-el="portalTargetSelector" v-if="portalCreated">
         <transition name="m--is" :duration="{ enter: 800, leave: 600 }">
-            <div class="m-overlay__wrap"
+            <div class="m-overlay__wrap m-u--app-body"
                  :class="[{ 'm--is-disabled':disabled },
                             className ]"
                  ref="modalWrap"
