--- a/src/components/steppers/steppers.sandbox.html
+++ b/src/components/steppers/steppers.sandbox.html
@@ -1,7 +1,7 @@
 <div>
     <m-steppers>
-        <m-steppers-item icon-name="m-svg__profile" state="completed" :confirmation="true">Profil</m-steppers-item>
-        <m-steppers-item icon-name="m-svg__calendar" state="in-progress" :confirmation="true">Calandrier</m-steppers-item>
-        <m-steppers-item icon-name="m-svg__logout" state="disabled" :confirmation="true">Déconnexion</m-steppers-item>
+        <m-steppers-item icon-name="m-svg__profile" state="visited" :completed="true">Profil</m-steppers-item>
+        <m-steppers-item icon-name="m-svg__calendar" state="in-progress" :completed="true">Calandrier</m-steppers-item>
+        <m-steppers-item icon-name="m-svg__logout" state="disabled" :completed="true">Déconnexion</m-steppers-item>
     </m-steppers>
 </div>
