MODUL-549 - edit class

--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -52,7 +52,7 @@
     <m-table :columns="columns" :rows="emptyRows"></m-table>
 
     <h2>Empty table - custom slot</h2>
-    <m-table :columns="columns" :rows="emptyRows" class="m-table-sandbox__empty">
+    <m-table class="m-table-sandbox__empty" :columns="columns" :rows="emptyRows">
         <template slot="empty">
             <td class="m-table-sandbox__empty__cell" :colspan="columns.length">
                 Empty table
