--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -23,7 +23,6 @@ $m-modal--max-width--s: 420px !default;
             justify-content: center;
         }
 
-        // doesn't work for slot content because of the scoped style... >_<
         h1,
         h2,
         h3,
@@ -34,7 +33,6 @@ $m-modal--max-width--s: 420px !default;
             font-size: $m-font-size--h4;
             font-weight: $m-font-weight--bold;
         }
-        ////////////////////////////////////////////
 
         @include m-is-ie() {
             display: block;
@@ -163,6 +161,14 @@ $m-modal--max-width--s: 420px !default;
     }
 
     &__body {
+        overflow-x: hidden;
+        overflow-y: auto;
+        flex: 1 1 auto;
+        position: relative;
+        z-index: 1;
+    }
+
+    &__content {
         position: relative;
         width: 100%;
         flex: 1 1 auto;
@@ -182,8 +188,22 @@ $m-modal--max-width--s: 420px !default;
 
     &__footer {
         display: flex;
+        position: relative;
         flex-direction: column;
         justify-content: center;
         border-top: 1px solid $m-color--grey;
+        animation: fadeIn 0.5s linear forwards;
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+            z-index: -1;
+        }
+
+        100% {
+            opacity: 1;
+            z-index: 1;
+        }
     }
 }
