MODUL-338 - more fixes

--- a/src/components/overlay/overlay.sandbox.html
+++ b/src/components/overlay/overlay.sandbox.html
@@ -30,7 +30,7 @@
         use the input to trigger the keyboard on mobile devices.
     </p>
 
-    <m-overlay title="Titre" @save="test">
+    <m-overlay title="Titre">
         <m-button slot="trigger">Ouvrir</m-button>
         <h2 slot="header" style="margin:0;">Titre</h2>
 
