--- a/src/components/steppers/steppers.scss
+++ b/src/components/steppers/steppers.scss
@@ -20,6 +20,7 @@ $m-steppers-item--line-width: 2px;
         display: flex;
         justify-content: space-between;
         margin: 0;
+        padding: 0;
     }
 
     &__selected-line {
