--- a/src/components/steppers/steppers.scss
+++ b/src/components/steppers/steppers.scss
@@ -21,6 +21,7 @@ $m-steppers-item--line-width: 2px;
         justify-content: space-between;
         margin: 0;
         padding: 0;
+        list-style: none;
     }
 
     &__selected-line {
