--- a/src/components/steppers-item/steppers-item.scss
+++ b/src/components/steppers-item/steppers-item.scss
@@ -5,35 +5,35 @@ $m-steppers--badge--size: 14px;
 
 .m-steppers-item {
     display: inline-flex;
-    flex-direction: column;
-    align-items: center;
+    list-style: none;
     z-index: 1;
-    outline: none;
 
     &.m--is-visited {
-        cursor: pointer;
-
-        &:focus .m-steppers-item__icon,
-        &:focus .m-steppers-item__title,
-        &:hover .m-steppers-item__icon,
-        &:hover .m-steppers-item__title {
-            color: $m-color--interactive;
-        }
-
         &::before,
-        &::after {
+        &::after,
+        .m-steppers-item__button {
             cursor: pointer;
         }
 
+        .m-steppers-item__button {
+            &:hover,
+            &:focus {
+                .m-steppers-item__icon,
+                .m-steppers-item__title {
+                    color: $m-color--interactive;
+                }
+            }
+        }
+
         .m-steppers-item__icon {
-            border-color: $m-color--ul-blue;
+            border-color: $m-color--interactive;
         }
     }
 
     &.m--is-in-progress {
         .m-steppers-item {
             &__icon {
-                border-color: $m-color--ul-yellow;
+                border-color: $m-color--active;
             }
 
             &__title {
@@ -43,10 +43,9 @@ $m-steppers--badge--size: 14px;
     }
 
     &.m--is-disabled {
-        cursor: not-allowed;
-
         &::before,
-        &::after {
+        &::after,
+        .m-steppers-item__button {
             cursor: not-allowed;
         }
 
@@ -66,6 +65,17 @@ $m-steppers--badge--size: 14px;
         }
     }
 
+    &__button {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        outline: none;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
     &__icon {
         position: relative;
         display: flex;
@@ -78,6 +88,7 @@ $m-steppers--badge--size: 14px;
         background-color: $m-color--white;
         font-size: $m-steppers--icon--size;
         transition: color $m-transition-duration;
+        color: $m-color--text;
     }
 
     &__icon-completed {
