MODUL-555 - MAJ affichage du dropdown en version mobile

--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -2,6 +2,7 @@
     <m-popper :open.sync="propOpen"
               @open="onOpen()"
               @close="onClose()"
+              @after-enter="onAfterEnter"
               :disabled="disabled"
               :id="id"
               ref="popper"
@@ -39,6 +40,7 @@
     <m-sidebar :open.sync="propOpen"
                @open="onOpen()"
                @close="onClose()"
+               @after-enter="onAfterEnter"
                :close-on-backdrop="closeOnBackdrop"
                :disabled="disabled"
                :focus-management="focusManagement"
