--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -369,7 +369,7 @@ $m-input-style--padding: 4px !default;
         width: 100%;
         padding: 0;
         font-size: $m-font-size;
-        font-weight: $m-font-weight--bold;
+        font-weight: $m-font-weight;
         line-height: $m-line-height;
 
         @include m-is-ie() {
