PR510  - change default value

--- a/src/components/radio/radio.html
+++ b/src/components/radio/radio.html
@@ -1,4 +1,4 @@
-<component :is="tag" class="m-radio"
+<component :is="propTag" class="m-radio"
     :class="{ 'm--is-mode-button': isButton(),
               'm--is-disabled': propDisabled,
               'm--is-read-only': propReadOnly,
