MODUL-555 - Ajustement du min-width sur le 'body.m-u--app-body'

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+body.m-u--app-body {
+    min-width: $m-min-width;
+}
+
 .m-u--app-body {
     font-family: $m-font-family;
     font-weight: $m-font-weight;
