MODUL-563 - MAJ du m-link (supression de la prop mode et ajout de la prop extern:boolean)

--- a/src/components/page-not-found/page-not-found.html
+++ b/src/components/page-not-found/page-not-found.html
@@ -3,7 +3,7 @@
         <p>{{'m-page-not-found:message' | f-m-i18n}}</p>
     </m-message>
     <p>{{'m-page-not-found:directions' | f-m-i18n}}</p>
-    <m-link mode="link">
+    <m-link>
         {{backToLabel}}
     </m-link>
 </div>
