--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -1,25 +1,5 @@
-<transition :css="false">
-    <router-link class="m-link"
-                 :class="{ 'm--is-unvisited': isUnvisited,
-                           'm--is-disabled': disabled,
-                           'm--no-underline': !underline,
-                           'm--is-skin-text': isSkinText,
-                           'm--is-skin-light': isSkinLight,
-                           'm--has-right-icon' : isIconPositionRight,
-                           'm--has-left-icon' : isIconPositionLeft }"
-                 :to="routerLinkUrl"
-                 :target="target"
-                 v-if="isRouterLink"
-                 :tabindex="disabled ? '-1' : tabindex"
-                 ref="router">
-        <m-icon :name="propIconName" :size="iconSize" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
-        <span class="m-link__text">
-            <slot></slot>
-        </span>
-        <m-i18n class="m-link__hidden" v-if="isTargetBlank" k="m-link:open-new-tab"></m-i18n>
-    </router-link>
-    <a class="m-link"
-       :class="{ 'm--is-unvisited': isUnvisited,
+<component class="m-link"
+           :class="{ 'm--is-unvisited': isUnvisited,
                  'm--is-disabled': disabled,
                  'm--no-underline': !underline,
                  'm--is-button': isButton,
@@ -27,17 +7,25 @@
                  'm--is-skin-light': isSkinLight,
                  'm--has-right-icon' : isIconPositionRight,
                  'm--has-left-icon' : isIconPositionLeft }"
-       :href="propUrl"
-       :target="target"
-       @click="onClick"
-       v-if="!isRouterLink"
-       @keyup="onKeyup"
-       :tabindex="disabled ? '-1' : tabindex"
-       ref="link">
-        <m-icon class="m-link__icon" :name="propIconName" :size="iconSize" v-if="hasIcon" aria-hidden="true"></m-icon>
-        <span class="m-link__text">
-            <slot></slot>
-        </span>
-        <m-i18n class="m-link__hidden" v-if="isTargetBlank" k="m-link:open-new-tab"></m-i18n>
-    </a>
-</transition>
+           :is="componentToShow"
+           :href="href"
+           :to="routerLinkUrl"
+           :target="target"
+           :role="buttonRole"
+           @click="onClick"
+           @keyup.enter="onClick"
+           @keyup.space="onClick"
+           :tabindex="propTabindex"
+           ref="link">
+    <m-icon class="m-link__icon"
+            :name="propIconName"
+            :size="iconSize"
+            v-if="hasIcon"
+            aria-hidden="true"></m-icon>
+    <span class="m-link__text">
+        <slot></slot>
+    </span>
+    <m-i18n class="m-link__hidden"
+            v-if="isTargetBlank"
+            k="m-link:open-new-tab"></m-i18n>
+</component>
