--- a/src/components/link/link.sandbox.html
+++ b/src/components/link/link.sandbox.html
@@ -1,34 +1,145 @@
-<div>
-    <h2>Utilisation du composant m-link</h2>
-    <p><m-link>Bonjour</m-link></p>
-
-    <h2>Icon name "m-svg__clock"</h2>
-    <p><m-link icon-name="m-svg__clock">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
-
-    <p><m-link icon-name="m-svg__clock" :disabled="true">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
-
-    <h2>Skin text</h2>
-    <p><m-link skin="text" icon-name="m-svg__clock">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
-    <div class="m-u--margin-top--l" style="background: grey; padding: 16px;">
-        <h2 class="m-u--no-margin">Skin light</h2>
-        <p><m-link skin="light" icon-name="m-svg__clock">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius reiciendis tempore modi rerum beatae. Placeat nam iure cupiditate ipsum non ipsa! Sequi enim ab, est tenetur a aliquam officiis cupiditate!</m-link></p>
-    </div>
-    <h2>Utilisation de la classe .m-u--link</h2>
+<div class="m-link-sandbox">
+    <h2>Default link</h2>
     <p>
-        <a href="#" class="m-u--link">
-            <span class="m-u--link-text">Lien (.m-u--link)</span>
+        <m-link>I am default m-link</m-link>
+    </p>
+
+    <h2>Link use as button</h2>
+    <p>
+        <m-link @click="openWindow01 = true">Open window</m-link>
+    </p>
+    <m-dialog :open.sync="openWindow01">
+        <p>Do you want to close the window?</p>
+    </m-dialog>
+
+    <h2>Link use as router-link</h2>
+    <p>
+        <m-link url="/">Home page</m-link>
+    </p>
+    <p>
+        <m-link url="m-button">m-button sandbox</m-link>
+    </p>
+    <p>
+        <m-link url="/components/m-dialog">m-dialog sandbox</m-link>
+    </p>
+    <h3 class="m-u--h5">Link with prop unvisited = true</h3>
+    <p>
+        <m-link url="/"
+                :unvisited="true">Home page</m-link>
+    </p>
+    <h3 class="m-u--h5">Link with prop underline = false</h3>
+    <p>
+        <m-link url="/"
+                :underline="false">Home page</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Link with prop disabled = true</h3>
+    <p>
+        <m-link url="/"
+                :disabled="true">Home page</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Open link in new tab</h3>
+    <p>Use <strong>target="_blank"</strong></p>
+    <p>
+        <m-link url="/"
+                target="_blank">Home page</m-link>
+    </p>
+
+
+    <h2>Link with prop <strong>extern: <i>boolean</i></strong></h2>
+    <h3 class="m-u--h5 m-u--margin-top--s">Link use whitout router-link</h3>
+    <p>When <strong>extern = true</strong>, the page will be reloaded after each navigation.</p>
+    <p>
+        <m-link url="/"
+                :extern="true">Home page</m-link>
+    </p>
+    <p>
+        <m-link url="m-button"
+                :extern="true">m-button sandbox</m-link>
+    </p>
+    <p>
+        <m-link url="https://www.google.ca/"
+                :extern="true">Google</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Never use external link width prop extern = false</h3>
+    <p>
+        <m-link url="https://www.google.ca/">Google (this link will not work)</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Open link in new tab</h3>
+    <p>Use <strong>target="_blank"</strong></p>
+    <p>
+        <m-link url="https://www.google.ca/"
+                :extern="true"
+                target="_blank">Google</m-link>
+    </p>
+
+    <h2>Link with a icon</h2>
+
+    <h3 class="m-u--h5">Link use with <strong>icon-name = "m-svg__clock"</strong></h3>
+    <p>
+        <m-link icon-name="m-svg__clock"
+                url="m-timepicker">m-timepicker sandbox</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Link use with <strong>icon-position = "right"</strong></h3>
+    <p>
+        <m-link icon-name="m-svg__clock"
+                icon-position="right"
+                url="m-timepicker">m-timepicker sandbox</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Link use with <strong>icon = "true"</strong></h3>
+    <p>
+        <m-link icon="true">Link with icon="true"</m-link>
+    </p>
+
+    <h3 class="m-u--h5">Link use with <strong>icon-size = "24px"</strong></h3>
+    <p>
+        <m-link icon-name="m-svg__clock"
+                icon-size="24px">Link with icon-size="24px"</m-link>
+
+    </p>
+
+    <h2>Link use with skin prop</h2>
+    <h3 class="m-u--h5 m-u--margin-top--s">skin = "default"</strong></h3>
+    <p>
+        <m-link skin="default">I am a link with default skin</m-link>
+    </p>
+
+    <h3 class="m-u--h5">skin = "text"</strong></h3>
+    <p>
+        <m-link skin="text">I am a link with text skin</m-link>
+    </p>
+
+    <h3 class="m-u--h5 ">skin = "light"</h3>
+    <p style="background: black; padding: 16px;">
+        <m-link skin="light">I am a link with light skin</m-link>
+    </p>
+
+    <h2>Using the class .m-u--link</h2>
+    <p>
+        <a href="#"
+           class="m-u--link">
+            <span class="m-u--link-text">Link (.m-u--link)</span>
         </a>
     </p>
     <p>
-        <a href="#" class="m-u--link">
-            <m-icon class="m-u--link-icon-left" name="m-svg__clock"></m-icon>
-            <span class="m-u--link-text">Icône à gauche (.m-u--link-icon-left)</span>
+        <a href="#"
+           class="m-u--link">
+            <m-icon class="m-u--link-icon-left"
+                    name="m-svg__clock"></m-icon>
+            <span class="m-u--link-text">Link width icon on the left (.m-u--link-icon-left)</span>
         </a>
     </p>
     <p>
-        <a href="#" class="m-u--link">
-            <span class="m-u--link-text">Icône à droite (.m-u--link-icon-right)</span>
-            <m-icon class="m-u--link-icon-right" name="m-svg__clock"></m-icon>
+        <a href="#"
+           class="m-u--link">
+            <span class="m-u--link-text">Link width icon on the right (.m-u--link-icon-right)</span>
+            <m-icon class="m-u--link-icon-right"
+                    name="m-svg__clock"></m-icon>
         </a>
     </p>
 </div>
