--- a/src/components/session-expired/session-expired.html
+++ b/src/components/session-expired/session-expired.html
@@ -2,9 +2,13 @@
     <m-message state="information">
         <m-i18n k="m-session-expired:message"></m-i18n>
     </m-message>
-    <p><m-i18n k="m-session-expired:directions-1"></m-i18n></p>
-    <p><m-i18n k="m-session-expired:directions-2"></m-i18n></p>
-    <m-link mode="link">
+    <p>
+        <m-i18n k="m-session-expired:directions-1"></m-i18n>
+    </p>
+    <p>
+        <m-i18n k="m-session-expired:directions-2"></m-i18n>
+    </p>
+    <m-link :extern="true">
         {{backToLabel}}
     </m-link>
 </div>
