--- a/src/components/tooltip/tooltip.html
+++ b/src/components/tooltip/tooltip.html
@@ -30,7 +30,6 @@
             :aria-controls="ariaControls"
             :aria-expanded="propOpen"
             slot="trigger"
-            mode="button"
             :underline="underline"
             :disabled="disabled"
             v-if="propMode !== 'icon'">
@@ -40,8 +39,14 @@
          class="m-tooltip__body-container"
          :class="{ 'm--has-close-button': propCloseButton }"
          :aria-labelledby="id">
-        <div class="m-tooltip__close-button" tabindex="0"  @keyup.enter="close" @click="close" v-if="propCloseButton">
-            <m-icon name="m-svg__close-clear" size="12px" :svg-tile="getCloseTitle"></m-icon>
+        <div class="m-tooltip__close-button"
+             tabindex="0"
+             @keyup.enter="close"
+             @click="close"
+             v-if="propCloseButton">
+            <m-icon name="m-svg__close-clear"
+                    size="12px"
+                    :svg-tile="getCloseTitle"></m-icon>
         </div>
         <div class="m-tooltip__body">
             <slot></slot>
